# pushkind-dashboards

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  settings.yaml  tox.ini
.github/: deploy.yaml
.github/workflows/: deploy.yaml  flake8-pytest.yml  flake8.yml  lint-pytest.yml  pylint.yml
migrations/versions/: 015f627bc466_.py  0a127af41cea_.py  2e3aaa69f8d2_.py  499882080a75_.py  5dffad5efc0b_.py  8040bcb4cf61_.py  9e9aeca08860_.py  a79ea56282ac_.py  d09b7b415f84_.py  dae9ddb3f872_.py
pushboards/: __init__.py  extensions.py
pushboards/admin/: __init__.py  forms.py  routes.py
pushboards/auth/: __init__.py  models.py  routes.py
pushboards/main/: __init__.py  models.py  process.py  routes.py
pushboards/main/upload/: __init__.py  excel_processor.py  openpyxl_get_colors.py  process.py
pushboards/oauth2/: google.py  yandex.py
pushboards/templates/: base.html  navigation.html  run.py
pushboards/templates/admin/: _functions.html  _reports.html  _user.html  index.html
pushboards/templates/auth/: index.html
pushboards/templates/errors/: 400.html  401.html  403.html  404.html  413.html  500.html  503.html
pushboards/templates/main/: index.html  show.html
tests/: conftest.py
tests/pushboards/auth/: test_auth_models.py  test_auth_routes.py
tests/pushboards/main/: test_main_models.py  test_main_routes.py  test_process.py
tests/pushboards/oauth2/: test_google.py  test_yandex.py
